fix: Set information header's text-align to center

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -137,6 +137,7 @@ $call-to-action-background-color: #3882f6;
       color: $information-header-color;
       font-size: $information-header-font-size;
       font-weight: $information-header-font-weight;
+      text-align: center;
     }
 
     > div {
